--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,34 @@
 body {
   margin: 0px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  height: fit-content;
+}
+
+.App {
+  height: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100%;
 }
 
 nav {
   background-color: rgb(41 42 45);
+  position: sticky;
+  top: 0px;
+  z-index: 1;
 }
 
 .nav-list {
   display: flex;
   gap: 20px;
   margin: 0px;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
 .nav-list>a>li {
@@ -23,10 +41,85 @@ a {
   color: white;
 }
 
-.active {
+.category-list-name {
+  text-transform: capitalize;
+}
+
+.shop-container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  height: 100%;
+  flex-grow: 1;
+
+}
+
+.sidebar {
   background-color: rgb(32 33 36);
+  color: white;
+  z-index: 0;
+}
+
+.sidebar>ul {
+  position: sticky;
+  top: 50px;
 }
 
 .category-list-name {
+  list-style: none;
+  padding: 10px;
+}
+
+.category-list-name:hover {
+  cursor: pointer;
+}
+
+.products-list {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  height: fit-content;
+}
+
+.products {
+  padding: 20px;
   text-transform: capitalize;
+}
+
+.product-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 200px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product-info {
+  padding: 10px;
+  font-size: 13px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.product-thumbnail {
+  width: 100%;
+  height: 175px;
+  object-fit: cover;
+}
+
+.add-to-basket {}
+
+.product-title {
+  font-weight: bold;
+
+}
+
+.active {
+  background-color: rgb(39 172 204);
+}
+
+.active>li {
+  background-color: rgb(39 172 204);
 }
