--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,32 @@ a {
 .active>li {
   background-color: rgb(39 172 204);
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid rgb(255, 255, 255);
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  align-self: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.loader-black {
+  border: 5px solid black;
+  border-bottom-color: transparent;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
