--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ ul {
 }
 
 .nav-list>li {
-
   list-style: none;
 }
 
@@ -59,6 +58,7 @@ a {
   background-color: rgb(32 33 36);
   color: white;
   z-index: 0;
+  max-width: 250px;
 }
 
 .sidebar>ul {
@@ -79,8 +79,8 @@ a {
 }
 
 .products {
-  padding: 20px;
   text-transform: capitalize;
+  flex: 2 1 75%;
 }
 
 .product-card {
@@ -106,11 +106,8 @@ a {
   object-fit: cover;
 }
 
-.add-to-basket {}
-
 .product-title {
   font-weight: bold;
-
 }
 
 .active {
@@ -144,4 +141,80 @@ a {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.add-qty-container {
+  display: flex;
+  align-items: stretch;
+}
+
+.add-to-basket-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: auto;
+  gap: 10px;
+  align-items: center;
+}
+
+button,
+input {
+  border-radius: 0px;
+  border: 1px solid black;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input {
+  text-align: center;
+  width: 30px;
+  border-left: 0px;
+  border-right: 0px;
+  margin: 0px;
+}
+
+label {
+  display: none;
+}
+
+button {
+  background-color: lightgray;
+  margin: 0px;
+}
+
+.add-to-basket-btn {
+  background-color: green;
+  color: white;
+  border-radius: 20px;
+  border: 0px;
+  padding: 5px 15px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: auto;
+}
+
+.main-section {
+  display: flex;
+  padding: 20px;
+  align-items: flex-start;
+}
+
+.shopping-basket {
+  border-radius: 10px;
+  flex: 1 2 25%;
+  min-height: 30vh;
+  max-height: 60vh;
+  position: sticky;
+  top: 20vh;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%),
+    0 6px 20px 0 rgb(0 0 0 / 19%);
+  padding: 10px;
 }
