--- a/src/App.css
+++ b/src/App.css
@@ -218,4 +218,34 @@ button:disabled {
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%),
     0 6px 20px 0 rgb(0 0 0 / 19%);
   padding: 10px;
+  font-size: 13px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+
+table td {
+  padding: 5px;
+}
+
+.order-total {
+  margin-top: auto;
+  font-weight: bold;
 }
